2003-01-03  Bang Jun-Young  <junyoung@netbsd.org>

	* include/winerror.h (ERROR_OPLOCK_NOT_GRANTED,
	ERROR_INVALID_OPLOCK_PROTOCOL, ERROR_SOURCE_ELEMENT_EMPTY,
	ERROR_DESTINATION_ELEMENT_FULL, ERROR_ILLEGAL_ELEMENT_ADDRESS,
	ERROR_MAGAZINE_NOT_PRESENT, ERROR_DEVICE_REINITIALIZATION_NEEDED,
	ERROR_DEVICE_REQUIRES_CLEANING, ERROR_DEVICE_DOOR_OPEN,
	ERROR_DEVICE_NOT_CONNECTED, ERROR_NOT_FOUND, ERROR_NO_MATCH,
	ERROR_SET_NOT_FOUND, ERROR_NO_TRACKING_SERVICE,
	ERROR_JOURNAL_DELETE_IN_PROGRESS, ERROR_JOURNAL_NOT_ACTIVE,
	ERROR_JOURNAL_ENTRY_DELETED, ERROR_ONLY_IF_CONNECTED,
	ERROR_NOT_SUPPORTED_ON_SBS, ERROR_SERVER_SHUTDOWN_IN_PROGRESS,
	ERROR_MUTUAL_AUTH_FAILED, ERROR_TIME_SKEW, ERROR_DEVICE_REMOVED,
	RPC_S_INVALID_ASYNC_HANDLE, RPC_S_INVALID_ASYNC_CALL,
	RPC_X_PIPE_CLOSED, RPC_X_PIPE_DISCIPLINE_ERROR, RPC_X_PIPE_EMPTY,
	ERROR_CANT_ACCESS_FILE, ERROR_CANT_RESOLVE_FILENAME,
	ERROR_WMI_GUID_NOT_FOUND, ERROR_WMI_INSTANCE_NOT_FOUND,
	ERROR_WMI_ITEMID_NOT_FOUND, ERROR_WMI_TRY_AGAIN, ERROR_WMI_READ_ONLY,
	ERROR_WMI_SET_FAILURE, ERROR_TRANSPORT_FULL, ERROR_FILE_OFFLINE,
	ERROR_REMOTE_STORAGE_NOT_ACTIVE, ERROR_REMOTE_STORAGE_MEDIA_ERROR,
	ERROR_NOT_A_REPARSE_POINT, ERROR_REPARSE_ATTRIBUTE_CONFLICT,
	ERROR_INVALID_REPARSE_DATA, ERROR_REPARSE_TAG_INVALID,
	ERROR_REPARSE_TAG_MISMATCH, ERROR_FILE_ENCRYPTED,
	ERROR_FILE_NOT_ENCRYPTED, ERROR_NOT_EXPORT_FORMAT,
	ERROR_CTX_WINSTATION_NAME_INVALID, ERROR_CTX_INVALID_PD,
	ERROR_CTX_PD_NOT_FOUND, ERROR_CTX_WD_NOT_FOUND,
	ERROR_CTX_CLOSE_PENDING, ERROR_CTX_NO_OUTBUF,
	ERROR_CTX_MODEM_INF_NOT_FOUND, ERROR_CTX_INVALID_MODEMNAME,
	ERROR_CTX_MODEM_RESPONSE_ERROR, ERROR_CTX_MODEM_RESPONSE_TIMEOUT,
	ERROR_CTX_MODEM_RESPONSE_NO_CARRIER,
	ERROR_CTX_MODEM_RESPONSE_NO_DIALTONE, ERROR_CTX_MODEM_RESPONSE_BUSY,
	ERROR_CTX_MODEM_RESPONSE_VOICE, ERROR_CTX_TD_ERROR,
	ERROR_CTX_WINSTATION_NOT_FOUND, ERROR_CTX_WINSTATION_ALREADY_EXISTS,
	ERROR_CTX_WINSTATION_BUSY, ERROR_CTX_BAD_VIDEO_MODE,
	ERROR_CTX_GRAPHICS_INVALID, ERROR_CTX_NOT_CONSOLE,