@@ -2359,6 +2359,15 @@ typedef struct _TRIVERTEX {
 	COLOR16 Blue;
 	COLOR16 Alpha;
 } TRIVERTEX, *PTRIVERTEX, *LPTRIVERTEX;
+typedef struct _GRADIENT_TRIANGLE {
+	ULONG Vertex1;
+	ULONG Vertex2;
+	ULONG Vertex3;
+} GRADIENT_TRIANGLE,*PGRADIENT_TRIANGLE,*LPGRADIENT_TRIANGLE;
+typedef struct _GRADIENT_RECT {
+	ULONG UpperLeft;
+	ULONG LowerRight;
+}GRADIENT_RECT,*PGRADIENT_RECT,*LPGRADIENT_RECT;
 typedef struct _DISPLAY_DEVICE {
   DWORD cb;
   WCHAR DeviceName[32];
